Fix visible scroll in firefox and ie

--- a/src/sticky-table.css
+++ b/src/sticky-table.css
@@ -31,6 +31,7 @@
   z-index: 0;
   position: relative;
   -webkit-overflow-scrolling: touch;
+  -ms-overflow-style: none;
 }
 .sticky-table .sticky-table-x-wrapper {
   width: 100%;
@@ -39,6 +40,8 @@
 .sticky-table .sticky-table-y-wrapper {
   height: 100%;
   overflow-y: auto;
+  margin-right: -17px;
+  padding-right: 17px;
 }
 /*
 Hack to make table paint on it's own layer.
